Eclipse 4.22 (M2) JDT Patch for Groovy-Eclipse
https://git.eclipse.org/c/jdt/eclipse.jdt.core.git/tag/?h=I20211023-1800

#1302 #1303